[package]
name = "simple-rust-crawler"
version = "0.1.0"
authors = ["Nikita Hismatov <hismatovns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
async-std = "1"
select = "0.6.0-alpha.1"
reqwest = "0.10.*"
tokio = {version = "0.2.*", features = ["full"] }
